package application.services;

import java.util.Scanner;
import java.util.function.Supplier;

import application.enums.MenuOptions;
import model.entities.Product;
import model.entities.ProductItem;
import model.enums.ProductCategory;

public class UserInputService {
	
	private Scanner sc;
	private OutputService output;
	private ValidationService validator =  new ValidationService();
	
	public UserInputService(Scanner sc, OutputService output) {
		this.sc = sc;
		this.output = output;
	}
	
	public MenuOptions getOption() {
		return getValidatedEnumValue("Insira uma opção: ", MenuOptions.class);
	}
	
	public Product getProduct() {
		String name = getValidatedString("Nome do produto: ");

		output.printMessage("CATEGORIAS -> ");
		output.printEnum(ProductCategory.class);
		ProductCategory category = getValidatedEnumValue("Categoria do produto: ", ProductCategory.class);

		Double price = getValidatedNumber("Preço: ", Double.class);
		
		return new Product(name, category, price);
	}
	
	public ProductItem getProductItem() {
		Product product = getProduct();
		Integer quantity = getQuantity();
		
		return new ProductItem(product, quantity);
	}
	
	public String getId() {
		return getValidatedString("ID do produto: ");
	}
	
	public Integer getQuantity() {
		return getValidatedNumber("Quantidade: ", Integer.class);
	}

	public <N extends Number> N getValidatedNumber(String inputMessage, Class<N> numClass) {
		return loop(() -> validator.validateNumber(getInput(inputMessage), numClass));
	}
	
	public String getValidatedString(String inputMessage ) {
		return loop(() -> validator.validateString(getInput(inputMessage)));
	}
	
	public <E extends Enum<E>> E getValidatedEnumValue(String inputMessage, Class<E> enumClass) {
		return loop(() -> validator.validateEnum(getInput(inputMessage), enumClass));
	}
	
	public String getInput(String inputMessage) {
		//sc.nextLine();
		output.printInputMessage(inputMessage);
		return sc.nextLine();
	}
	
	private <T> T loop(Supplier<T> action) {
		while (true) {
			try {
				return action.get();
			} catch(IllegalArgumentException e) {
				output.printError(e.getMessage());
			}
		}
	}
	
	public void closeService() {
		sc.close();
	}
	
	public void waitNextInput() {
		//sc.nextLine(); //Consome quebra de linha do input anterior
		sc.nextLine();
	}
}
